# sqs-status

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: main.rs
wix/: main.wxs
