[package]
name = "sqs-status"
version = "0.1.0"
authors = ["Bruce Adams <bruce.adams@acm.org>"]
description = "List the status of AWS SQS queues"
edition = "2021"
homepage = "https://github.com/bruceadams/yj"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bruceadams/sqs-status"

[package.metadata.wix]
upgrade-guid = "F09CB723-2706-4242-A6D7-F64FE465E7D2"
path-guid = "99BDC522-CD4B-4058-AD7B-3E403CC9939C"
license = false
eula = false

[dependencies]
anyhow = "1.0.89"
aws-config = "1.5.7"
aws-types = "1.3.3"
aws-sdk-sqs = "1.44.0"
aws-smithy-async = "1.2.1"
colored = "2.1.0"
futures = "0.3.30"
serde_json = "1.0.128"
tracing = "0.1.40"

[dependencies.clap]
features = ["derive", "wrap_help"]
version = "4.5.18"

[dependencies.serde]
version = "1.0.210"
features = ["derive"]

[dependencies.tokio]
version = "1.40.0"
features = ["macros", "rt-multi-thread"]

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3.18"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "bruceadams/homebrew-utilities"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
