[package]
name = "sqs-status"
version = "0.3.1"
authors = ["Bruce Adams <bruce.adams@acm.org>"]
description = "List the status of AWS SQS queues"
edition = "2021"
homepage = "https://github.com/bruceadams/sqs-status"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bruceadams/sqs-status"

[package.metadata.wix]
upgrade-guid = "F09CB723-2706-4242-A6D7-F64FE465E7D2"
path-guid = "99BDC522-CD4B-4058-AD7B-3E403CC9939C"
license = false
eula = false

[dependencies]
anyhow = "1.0.97"
aws-config = "1.6.1"
aws-types = "1.3.6"
aws-sdk-sqs = "1.64.0"
aws-smithy-async = "1.2.5"
colored = "3.0.0"
futures = "0.3.31"
serde_json = "1.0.140"
tracing = "0.1.41"

[dependencies.clap]
features = ["derive", "wrap_help"]
version = "4.5.34"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.tokio]
version = "1.44.1"
features = ["macros", "rt-multi-thread"]

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3.19"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
